# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.adoc  aoc.py  aoc_test.py  day-1.py  day-2.py  day-3.py  day-4.py  day-5.py  day-6.py  day-7.py  day-8.py  pyproject.toml
2015/: d03p1.py  d03p2.py  d05p2.py  d06p1.py  d06p2.py  d07p1.py  d07p2.py  d09p1.py  d09p2.py  d10p1.py  d10p2.py  d11p1.py  d11p2.py  d12p1.py  d12p2.py  d13p1.py  d13p2.py  d14p1.py  d14p2.py  d15p1.py  d15p2.py  d16p1.py  d16p2.py  d17p1.py  d17p2.py  d18p1.py  d18p2.py  d19p1.py  d19p2.py  d1p1.py  d1p2.py  d20p1.py  d20p2.py  d21p1.py  d21p2.py  d22p1.py  d22p2.py  d23p1.py  d23p2.py  d24p1.py  (+12 more)
2025/: day01part1.py  day01part2.py  day02part1.py  day02part2.py  day03part1.py  day03part2.py  day04part1.py  day04part2.py  day05part1.py  day06part1.py  day06part2.py  day07part1.py  day08part1.py  day08part2.py  day09part1.py  day09part2.py
src/aoc/: aoc.py  day-1.py  day-2.py  day-3.py  day-4.py  day-5.py  day-6.py  day-7.py  day-8.py
src/aoc/year2025/: day01part1.py  day01part2.py  day02part1.py  day02part2.py  day03part1.py  day04part1.py  day05part1.py  day05part2.py  day06part1.py  day06part2.py  day07part1.py  day07part2.py  day08part1.py  day08part2.py  day09part1.py  day09part2.py
