[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.1.0"
authors = [
    { name="Taben Malik", email="tabenjmalik@gmail.com" },
]
description = "Solutions to Advent of Code problems."

[project.scripts]
aoc-get = "aoc.aoc:_get"
