[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.0.0"
authors = [
    { name="Taben Malik", email="tabenjmalik@gmail.com" },
]
description = "Advent of Code helpers"

[project.scripts]
aoc-start-problem = "aoc:start_problem"

[tool.setuptools]
py-modules = ["aoc"]

[tool.coverage.run]
plugins = ["covdefaults"]
